--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '5.0' # SDK Version to use.
-          source-url: https://nuget.pkg.github.com/nuget-v2-lab/index.json
+          source-url: https://nuget.pkg.github.com/test-nuget-1/index.json
         env:
           NUGET_AUTH_TOKEN: ${{ github.token }}
       - name: Build Nuget packages
