--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -17,6 +17,8 @@ jobs:
         with:
           dotnet-version: '5.0' # SDK Version to use.
           source-url: https://nuget.pkg.github.com/test-nuget-1/index.json
+        env:
+            NUGET_AUTH_TOKEN: ${{ github.token }}
       - name: Build Nuget packages
         run: dotnet build
         env:
@@ -26,6 +28,6 @@ jobs:
         env:
           sha: ${{ github.sha }}
       - name: Publish to GitHub
-        run: dotnet nuget push bin/Release/Publish/**/*.nupkg --api-key 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 --skip-duplicate
+        run: dotnet nuget push bin/Release/Publish/**/*.nupkg --api-key ${{secrets.GITHUB_TOKEN}} --skip-duplicate
         env:
           sha: ${{ github.sha }}
